# endless-gaming

./: .dockerignore  .gitignore  CLAUDE.md  DO_SETUP.md  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  README.Docker.md  README.md  docker-compose.yml  master.json  pyproject.toml  requirements.txt  steam-data-fetching-spec.md
.do/: app-docker.yaml  app.yaml  (+1 more)
endless-gaming-backend/: CLAUDE.md  DISCOVERY_API_SPEC.md  Dockerfile  alembic.ini  config.py  master.json  pyproject.toml
endless-gaming-backend/alembic/versions/: 3e5641233645_add_storefront_data_model.py  576cf0b726eb_add_storefront_data_table.py  cdf2c58c0747_add_screenshots_and_movies_to_.py
endless-gaming-backend/app/: __init__.py  config.py
endless-gaming-backend/app/discovery/: __init__.py  blueprint.py  schemas.py  utils.py
endless-gaming-backend/app/steam/: __init__.py  blueprint.py  schemas.py  utils.py
endless-gaming-backend/collectors/: __init__.py  steam_collector.py  steam_store_collector.py  steamspy_all_collector.py
endless-gaming-backend/models/: __init__.py  game.py  game_metadata.py  storefront_data.py
endless-gaming-backend/scripts/: collect_games.py  export_master_json.py  generate_master_json_direct.py  inspect_db.py  setup_db.py
endless-gaming-backend/tests/: conftest.py  test_discovery_api.py  test_models.py  test_rate_limiter.py  test_steam_api.py  test_steam_store_collector.py  test_steamspy_collector.py
endless-gaming-backend/utils/: __init__.py  http_client.py  rate_limiter.py  steam_api_client.py
endless-gaming-backend/workers/: __init__.py  parallel_fetcher.py
(+145 files in other folders)
