[tool.poetry]
name = "endless-gaming"
version = "0.1.0"
description = ""
authors = ["Tom Neyland <tcneyland@gmail.com>"]
packages = [
    {include = "models"},
    {include = "collectors"},
    {include = "utils"},
    {include = "workers"},
    {include = "scripts"}
]

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.41"
alembic = "^1.16.4"
httpx = "^0.28.1"
pydantic-settings = "^2.10.1"
limits = "^5.4.0"
tenacity = "^9.1.2"
typer = "^0.16.0"
rich = "^14.0.0"
python-dotenv = "^1.1.1"
psycopg2-binary = "^2.9.10"
aiolimiter = "^1.2.1"
flask = "^3.1.1"
flask-caching = "^2.3.1"
marshmallow = "^4.0.0"
flask-cors = "^6.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
factory-boy = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
